// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media component Should be a Media Content 1`] = `
<div
  className="content"
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`Media component Should concat classname in props with Bulma classname 1`] = `
<article
  className="media other-class this-is-a-test"
>
  <p>
    Default
  </p>
</article>
`;

exports[`Media component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Content": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "children": null,
      "renderAs": "div",
    },
    "render": [Function],
  },
  "Item": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "children": null,
      "position": "center",
      "renderAs": "div",
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "children": null,
    "renderAs": "article",
  },
  "render": [Function],
}
`;

exports[`Media component Should expose Level Side and Item 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "children": null,
    "renderAs": "div",
  },
  "render": [Function],
}
`;

exports[`Media component Should expose Level Side and Item 2`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "children": null,
    "position": "center",
    "renderAs": "div",
  },
  "render": [Function],
}
`;

exports[`Media component Should have media classname 1`] = `
<article
  className="media"
>
  <img
    alt="placeholder"
    src="http://bulma.io/images/placeholders/128x128.png"
  />
</article>
`;

exports[`Media component Should hbe a Media Item 1`] = `
<figure
  className="media-left"
>
  <img
    alt="placeholder"
    src="http://bulma.io/images/placeholders/128x128.png"
  />
</figure>
`;

exports[`Media component Should hbe a Media Item Centered 1`] = `
<figure
  className="media-content"
>
  <img
    alt="placeholder"
    src="http://bulma.io/images/placeholders/128x128.png"
  />
</figure>
`;

exports[`Media component Should use inline styles 1`] = `
<article
  className="media"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</article>
`;
